[jdk11] Use standard charsets